# openptv

./: .gitignore  .travis.yml  BUILD.md  README  README.md  appveyor.yml  command  commands.sh  patch.diff  pyproject.toml  run_cibuildwheel.sh
.scripts/: run_osx_build.sh  (+1 more)
liboptv/: .gitignore  CMakeLists.txt  Makefile.am  README  README.txt  configure.ac
liboptv/CMakeModules/: FindCheck.cmake
liboptv/include/: calibration.h  correspondences.h  epi.h  glass.h  image_processing.h  imgcoord.h  intersect.h  lsqadj.h  main.h  multimed.h  orientation.h  parameters.h  peakfitting.h  ray_tracing.h  segmentation.h  sortgrid.h  track.h  track3d.h  tracking_frame_buf.h  tracking_run.h  trafo.h  vec_utils.h
liboptv/include/optv/: parameters.h
liboptv/src/: CMakeLists.txt  Makefile.am  calibration.c  calibration.py  correspondences.c  correspondences.py  epi.c  epi.py  image_processing.c  image_processing.py  imgcoord.c  imgcoord.py  intersect.c  lsqadj.c  lsqadj.py  main  main.c  main_test.c  multimed.c  multimed.py  old_multimed.c  orientation.c  orientation.py  parameters.c  parameters.py  peakfitting.c  prepare_eval_shake code temp.c  ray_tracing.c  ray_tracing.py  rotation.c  segmentation.c  segmentation.py  sortgrid.c  sortgrid.py  test_ray_tracing.py  test_vec_utils.py  track.c  track.py  track3d.c  tracking_frame_buf.c  (+7 more)
liboptv/tests/: CMakeLists copy.txt  CMakeLists.txt  Makefile.am  check_calibration.c  check_correspondences.c  check_epi.c  check_fb.c  check_image_proc.c  check_image_processing.c  check_imgcoord.c  check_intersect.c  check_lsqadj.c  check_multimed.c  check_orientation.c  check_parameters.c  check_peakfitting.c  check_ray_tracing.c  check_segmentation.c  check_sortgrid.c  check_tiffread.c  check_track.c  check_track3d.c  check_trafo.c  check_vec_utils.c  gen_track_data.py
liboptv/tests/testing_fodder/: added.818  ptv_is.818  rt_is.818  sample_0042_targets  sample_0043_targets  sample_0044_targets
liboptv/tests/testing_fodder/burgers/: addpar.raw  conf.yaml
liboptv/tests/testing_fodder/cal/: calblock.txt  calibration_block.txt  cam1.tif.ori  cam2.tif.ori  cam3.tif.addpar  cam3.tif.ori  sym_cam4.tif.ori
liboptv/tests/testing_fodder/parameters/: cal_ori.par  criteria.par  criteria_2.par  detect_plate.par  man_ori.par  ptv_2.par  shaking.par
py_bind/: .gitignore  MANIFEST.in  README.md  README.txt  __init__.py  build.py  build_all.sh  bump_version.py  clean_venv_build.bat  clean_venv_build.sh  cythonize.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_intersect.py  test_lena.py
py_bind/liboptv/src/: track.c
py_bind/optv/: __init__.py  calibration.pxd  calibration.py  calibration.pyx  correspondences.pxd  correspondences.pyx  epipolar.pxd  epipolar.pyx  image_processing.pxd  image_processing.pyx  imgcoord.pxd  imgcoord.pyx  intersect.pyx  orientation.pxd  orientation.pyx  parameters.pxd  parameters.pyx  segmentation.pxd  segmentation.pyx  track_debugger.py  tracker.pxd  tracker.pyx  tracking_framebuf.pxd  tracking_framebuf.pyx  trafo.pxd  trafo.pyx  transforms.pxd  transforms.pyx  vec_utils.pxd
py_bind/optv.egg-info/: requires.txt
py_bind/optv/optv/: calibration.h  correspondences.h  epi.h  glass.h  image_processing.h  imgcoord.h  lsqadj.h  multimed.h  orientation.h  parameters.h  ray_tracing.h  segmentation.h  sortgrid.h  track.h  tracking_frame_buf.h  tracking_run.h  trafo.h  vec_utils.h
py_bind/src/optv/: __init__.py  epipolar.pyx  imgcoord.pyx  orientation.pxd  segmentation.pyx  tracking_framebuf.pyx  transforms.pyx
py_bind/test/: conftest.py  test_MultimediaParams.py  test_Params_binding.py  test_Py_mm_np.py  test_burgers.py  test_calibration_binding.py  test_corresp.py  test_epipolar.py  test_framebuf.py  test_image_processing.py  test_img_coord.py  test_installation.py  test_interactive_tracking.py  test_intersect.py  test_orientation.py  test_parameters_bindings.py  test_pyoptv_calibration_binding.py  test_segmentation.py  test_tracker.py  test_trafo_bindings.py  test_version.py
py_bind/test/testing_fodder/burgers/: conf.yaml
py_bind/test/testing_fodder/cal/: cam2.tif.ori
py_bind/test/testing_fodder/calibration/: cam2.tif.addpar  sym_cam2.tif.ori  sym_cam4.tif.ori
py_bind/test/testing_fodder/control_parameters/: control.par
py_bind/test/testing_fodder/corresp/: control.par
py_bind/test/testing_fodder/dumbbell/: cam1.tif.ori  cam2.tif.ori  cam3.tif.ori  cam4.tif.ori
py_bind/test/testing_fodder/frame/: added.333  cam1.0333_targets  cam3.0333_targets  cam4.0333_targets  ptv_is.333  rt_is.333
py_bind/test/testing_fodder/parameters/: dumbbell.par  targ_rec.par
py_bind/test/testing_fodder/target_parameters/: targ_rec.par  targ_rec_3cam.par
py_bind/test/testing_fodder/track/: conf.yaml
py_bind/test/testing_fodder/tracking_parameters/: track.par
pyoptv/: MANIFEST.in  Makefile  README.md  __init__.py  calibration.py  correspondences.py  epi.py  glass.py  image_processing.py  imgcoord.py  lsqadj.py  multimed.py  orientation.py  parameters.py  pyproject.toml  ray_tracing.py  segmentation.py  setup.py  sortgrid.py  track.py  tracking_frame_buf.py  tracking_run.py  trafo.py  vec_utils.py
pyoptv/src/pyoptv/: __init__.py  calibration.py  constants.py  correspondences.py  epi.py  glass.py  image_processing.py  imgcoord.py  lsqadj.py  multimed.py  orientation.py  parameters.py  ray_tracing.py  segmentation.py  sortgrid.py  track.py  tracking_frame_buf.py  tracking_run.py  trafo.py  vec_utils.py
pyoptv/src/pyoptv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyoptv/src/pyoptv/tests/: test_epi_candidates.py
pyoptv/tests/: conftest.py  gen_track_data.py  test_basic_epipolar.py  test_calibration.py  test_correspondences.py  test_epi.py  test_epi_candidates.py  test_epi_find_candidate.py  test_glass.py  test_image_processing.py  test_imgcoord.py  test_lsqadj.py  test_multimed.py  test_orientation.py  test_parameters.py  test_ray_tracing.py  test_segmentation.py  test_sortgrid.py  test_track.py  test_tracking_frame_buf.py  test_tracking_run.py  test_trafo.py  test_vec_utils.py
(+1597 files in other folders)
