[build-system]
requires = ["setuptools", "wheel", "cibuildwheel", "cython"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# Specify the Python versions and platforms you want to build for
# For example, to build for manylinux, macOS, and Windows:
windows = ["cp38", "cp39", "cp310"]
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"
macos = ["cp38", "cp39", "cp310"]

# Run the prepare command before building the wheel
before-build = "cd py_bind && pip install numpy'<1.24' cython'<3' && python setup.py prepare && pip install ."

# Run tests after building the wheel
test-command = "pytest {project}/tests"

[[tool.cibuildwheel.overrides]]
select = "cp3{8,9}-*"
manylinux-x86_64-image = "manylinux2010"