[build-system]
requires = ["setuptools>=45", "wheel", "cmake>=3.15", "ninja", "cython<3"]
build-backend = "setuptools.build_meta"

[project]
name = "openptv"
version = "0.3.0"
description = "OpenPTV - framework for particle tracking velocimetry"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "OpenPTV Community", email = "openptv@googlegroups.com"}
]
dependencies = [
    "numpy",
    "cython",
    "pyyaml",
    "matplotlib"
]

[tool.setuptools]
packages = ["optv"]
package-dir = {"" = "python"}

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = "test_*.py"

[tool.cibuildwheel]
skip = ["cp36-*", "cp37-*"]
build-frontend = "build"
# Specify the Python versions and platforms you want to build for
# For example, to build for manylinux, macOS, and Windows:
windows = ["cp38", "cp39", "cp310"]
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"
macos = ["cp38", "cp39", "cp310"]

# Run the prepare command before building the wheel
before-build = "cd py_bind && pip install numpy'<1.24' cython'<3' && python setup.py prepare && pip install ."

# Run tests after building the wheel
test-command = "pytest {project}/tests"

[[tool.cibuildwheel.overrides]]
select = "cp3{8,9}-*"
manylinux-x86_64-image = "manylinux2010"
