[build-system]
requires = ["setuptools>=45", "wheel", "cmake>=3.15", "ninja", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "openptv"
version = "0.3.0"
description = "OpenPTV - framework for particle tracking velocimetry"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "OpenPTV Community", email = "openptv@googlegroups.com"}
]
dependencies = [
    "numpy",
    "cython",
    "pyyaml",
    "matplotlib"
]

[tool.setuptools]
packages = ["optv"]
package-dir = {"" = "python"}

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = "test_*.py"

[tool.cibuildwheel]
skip = ["cp36-*", "cp37-*", "cp38-*", "cp39-*"]
build-frontend = "build"
# Support Python 3.10-3.13
windows = ["cp310-*", "cp311-*", "cp312-*", "cp313-*"]
manylinux-x86_64-image = "manylinux2014"
macos = ["cp310-*", "cp311-*", "cp312-*", "cp313-*"]

before-build = "cd py_bind && pip install numpy cython && python setup.py prepare && pip install ."
