[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
    "cython>=3.0.0",
    "numpy==1.26.4"
]
build-backend = "setuptools.build_meta"

[project]
name = "optv"
version = "0.3.0"
description = "OpenPTV Python bindings"
readme = {file = "README.txt", content-type = "text/x-rst"}
requires-python = ">=3.10"
license = "LGPL-3.0-or-later"
authors = [
    {name = "OpenPTV Community", email = "openptv@googlegroups.com"}
]
dependencies = [
    "numpy==1.26.4",
    "pyyaml",
]

[tool.setuptools]
packages = ["optv"]
package-dir = {"optv" = "optv"}
