[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
    "cython>=3.0.0",
    "numpy==1.26.4"
]
build-backend = "setuptools.build_meta"

[project]
name = "optv"
dynamic = ["version"]
description = "OpenPTV Python bindings"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {text = "LGPL-3.0-or-later"}
authors = [
    {name = "OpenPTV Community", email = "openptv@googlegroups.com"}
]
dependencies = [
    "numpy==1.26.4",
    "pyyaml",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools]
packages = ["optv"]
package-dir = {"optv" = "optv"}

[tool.setuptools.dynamic]
version = {attr = "optv.version.__version__"}

[tool.cibuildwheel]
skip = "pp* cp36-* cp37-* cp38-* cp39-*"
test-command = "cd {project}/py_bind/test && python -m pytest test_version.py"
test-extras = ["test"]
test-requires = ["pytest"]
test-skip = "*-musllinux*"
build-verbosity = 1

# Environment variables for all platforms
environment = { CFLAGS="-Iliboptv/include" }

[tool.cibuildwheel.linux]
before-build = [
    "pip install numpy==1.26.4 cython>=3.0.0"
]

[tool.cibuildwheel.macos]
before-build = [
    "pip install numpy==1.26.4 cython>=3.0.0"
]

[tool.cibuildwheel.windows]
before-build = [
    "pip install numpy==1.26.4 cython>=3.0.0"
]
