[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
    "cython>=3.0.0",
    "numpy==1.26.4"
]
build-backend = "setuptools.build_meta"

[project]
name = "optv"
dynamic = ["version"]
description = "OpenPTV Python bindings"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {text = "LGPL-3.0-or-later"}
authors = [
    {name = "OpenPTV Community", email = "openptv@googlegroups.com"}
]
dependencies = [
    "numpy==1.26.4",
    "pyyaml",
]

[tool.setuptools]
packages = ["optv"]
package-dir = {"optv" = "optv"}

[tool.setuptools.dynamic]
version = {attr = "optv.version.__version__"}
